--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         
     </div>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.min.js" integrity="sha512-c3Nl8+7g4LMSTdrm621y7kf9v3SDPnhxLNhcjFJbKECVnmZHTdo+IRO05sNLTH/D3vA6u1X32ehoLC7WFVdheg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
+    <script src="js/ajax-utils.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
