--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Rubik+Bubbles&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="style.css">
     <title>Carousel</title>
 </head>
 <body>
+    <h1>Foster Cats 2022</h1>
     <div class="image-container">
         <span style="--i: 1">
             <img src="images/20220626_104841_GOOD_Radar.jpg" alt="">
