new font and title

--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     <title>Carousel</title>
 </head>
 <body>
+    <div class="titleblock">
+    
+    <!-- <img src="https://img.freepik.com/premium-vector/cute-white-cat-cartoon-vector-illustration_42750-808.jpg?w=120" alt="cat" class="src"> -->
     <h1>Foster Cats 2022</h1>
+    </div>
     <div class="image-container">
         <span style="--i: 1">
             <img src="images/20220626_104841_GOOD_Radar.jpg" alt="">
