--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
     
     <!-- <img src="https://img.freepik.com/premium-vector/cute-white-cat-cartoon-vector-illustration_42750-808.jpg?w=120" alt="cat" class="src"> -->
     <h1>Foster Cats 2022</h1>
+    <h6>Soundtrack : </h6>
+    <audio controls class="audio">
+        <source src="music/＂Cat, O Cat＂.wav" type="audio/wav">
+
+    </audio>
     </div>
     <div class="image-container">
         <span style="--i: 1">
